# 2025-10-packaging-workshop

./: .gitignore  README.md  pyproject.toml
src/packworkshop202510/: happy.py
