[project]
authors = [{name = "Hans Fangohr", email = "fangohr@users.noreply.github.com"}]
dependencies = ["requests>=2.32.5,<3", "build>=1.3.0,<2", "twine>=6.2.0,<7"]
name = "2025-10-packaging-workshop"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
2025_10_packaging_workshop = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python -c 'from 2025_10_packaging_workshop import happy; happy.hello()'"
